update to the latest standard

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: Documentation Overview
 id: introduction
-sidebar_label: 📚 Overview
+sidebar_label: Overview
 ---
 
 import { Grid } from '@site/src/components/Grid';
@@ -12,10 +12,10 @@ import { Card } from '@site/src/components/Card';
 
 Welcome to my personal documentation and knowledge base! This space serves multiple purposes:
 
-- 📝 **Personal Reference**: Quick access to technical solutions and configurations I frequently use
-- 🎓 **Knowledge Sharing**: Detailed documentation of my projects and learnings
-- 🔧 **Tutorials**: Step-by-step guides for various technical tasks
-- 🚀 **Project Documentation**: Comprehensive documentation for my open-source projects
+- **Personal Reference**: Quick access to technical solutions and configurations I frequently use
+- **Knowledge Sharing**: Detailed documentation of my projects and learnings
+- **Tutorials**: Step-by-step guides for various technical tasks
+- **Project Documentation**: Comprehensive documentation for my open-source projects
 
 ## Documentation Structure
 
@@ -30,30 +30,25 @@ Welcome to my personal documentation and knowledge base! This space serves multi
     description="Programming guides, tool configurations, and development environment setups."
     link="/docs/category/code"
   />
-  <Card
-    title="Tutorials"
-    description="Step-by-step guides for various technical tasks and system configurations."
-    link="/docs/tutorials"
-  />
 </Grid>
 
 ## Featured Documentation
 
-### 🐧 Arch Linux GUI
+### Arka Linux GUI
 The flagship project - a graphical installer for Arch Linux that maintains the distribution's core principles while making it more accessible. Find comprehensive documentation about:
 - Installation guides
 - System configurations
 - Troubleshooting
 - Development guidelines
 
-### 💻 Development Resources
+### Development Resources
 Documentation covering various aspects of development:
 - Programming languages and frameworks
 - Development tools and environments
 - Best practices and patterns
 - System configurations
 
-### 📘 Tutorials & Guides
+### Tutorials & Guides
 Step-by-step tutorials for:
 - System administration tasks
 - Development workflows
